--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Try
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Practice Git And Git Hub</h1>
+<p>I am Himanshu Kumar Singh and Just Learning To Push Code on Git hub Via Local Machine.</p>
+
+</body>
+</html>
